app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require bootstrap
 *= require font-awesome
 *= require_tree .
 *= require_self
 */

a i:hover {
	text-decoration: none;
}

.logo {
	height: 100%;
}

.panel i, .panel span {
	margin: 0 5px;
}

/* Disable Chrome picker */
input::-webkit-calendar-picker-indicator{
    display: none;
}

input[type="date"]::-webkit-input-placeholder{ 
    visibility: hidden !important;
}
.todos-header h2 {
    margin: 4px 0;
    display: inline-block;
}

.todos-header h2.add_todo {
    float: right;
}

.panel-body.todo-panel {
    padding: 15px 0 0;
}

.panel.todo {
    margin-bottom: 10px;
}

.panel.todo .panel-body {
    padding: 10px 0 8px;
}

#todo-form {
    padding: 0 15px !important;
}

